# rust-autossh

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  README.md  config.example.toml  config.toml  service.ps1  theme.md
.pi/backup/wsl-z-drive/: SKILL.md
.pi/extensions/: build.ts
.pi/skills/autossh-ui-preview/: SKILL.md
.pi/skills/wsl-z-drive/: SKILL.md
core/: Cargo.toml
core/src/: config.rs  lib.rs  main.rs  ssh.rs  ssh_log.rs  supervisor.rs
core/tests/unit/: config.rs  ssh.rs  ssh_log.rs  supervisor.rs
crate/core/: Cargo.toml
crate/core/src/: config.rs  lib.rs  logger.rs  main.rs  ssh.rs  ssh_log.rs  supervisor.rs
crate/core/tests/unit/: config.rs  logger.rs  ssh.rs  ssh_log.rs  supervisor.rs
crate/friday/: Cargo.toml
crate/friday/src/: http.rs  lib.rs  playback.rs  player.rs  receiver.rs
crate/ui/: Cargo.toml  build.rs
crate/ui/src/: friday.rs  log.rs  main.rs  modal.rs  ssh_config.rs  tray.rs  tunnel_icon.rs
crate/ui/src/app/: centre.rs  connections.rs  dashboard.rs  logs.rs  mod.rs  modal_host.rs  supervisor.rs
src/: config.rs  lib.rs  logger.rs  main.rs  ssh.rs  supervisor.rs
tests/unit/: config.rs  ssh.rs
ui/: Cargo.toml
ui/src/: app.rs  log.rs  main.rs  modal.rs  ssh_config.rs  supervisor.rs
