[package]
name = "rust-autossh"
version = "0.1.0"
edition = "2024"
description = "A small SSH tunnel supervisor for Windows and Linux"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
