[package]
name = "autossh-core"
version = "0.1.0"
edition = "2024"
description = "SSH-tunnel supervisor: starts `ssh -L/-R`, restarts on exit, polls config for hot reloads"
license = "MIT"

[lib]
name = "autossh_core"
path = "src/lib.rs"

[[bin]]
name = "rust-autossh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = ["Win32_Globalization"] }
