[package]
name = "friday"
version = "0.1.0"
edition = "2024"
description = "Embedded Friday voice receiver: localhost HTTP listener that plays MP3 via mpv"
license = "MIT"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
# Rust std 的 TcpListener::bind 和 tiny_http::Server::http 在 Windows 上
# 默认不开 SO_REUSEADDR，Stop 后立即重启 17322 会撞 WSAEADDRINUSE (os 10048)。
# 用 socket2 自己 bind 才能在 bind 之前打开 SO_REUSEADDR。
socket2 = "0.5"
