[package]
name = "autossh-ui"
version = "0.1.0"
edition = "2024"
description = "Native GUI for editing autossh-core configuration and watching its runtime log"
license = "MIT"

[[bin]]
name = "autossh-ui"
path = "src/main.rs"

[dependencies]
autossh-core = { path = "../core" }
friday = { path = "../friday" }
anyhow = "1.0"
egui = "0.29"
eframe = "0.29"
encoding_rs = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.21.2"
