[package]
name = "autossh-ui"
version = "0.1.0"
edition = "2024"
description = "Native GUI for editing autossh-core configuration and watching its runtime log"
license = "MIT"
build = "build.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winres = "0.1"

[[bin]]
name = "autossh-ui"
path = "src/main.rs"

[dependencies]
autossh-core = { path = "../core" }
friday = { path = "../friday" }
anyhow = "1.0"
encoding_rs = "0.8"

# Windows release: OpenGL only — no accesskit / wayland / x11 (smaller exe).
[target.'cfg(target_os = "windows")'.dependencies]
# No bundled egui fonts on Windows — `install_windows_icon_fonts` loads Segoe/YaHei.
eframe = { version = "0.34.3", default-features = false, features = ["glow"] }
tray-icon = "0.24.1"

# Linux dev / UI preview skill.
[target.'cfg(not(target_os = "windows"))'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
